<resources>
    <!--MainActivity String Resources-->
    <string name="app_name">BookUbuntu</string>
    <string name="app_icon">Africa Content Icon</string>
    <string name="main_heading">BookUbuntu</string>
    <string name="sub_heading">Your Digital Gateway to Knowledge</string>
    <string name="main_image">Main Screen Image</string>
    <string name="text">Welcome to BookUbuntu! Connect
        with other students to acquire
        textbooks and study material tailored
        to your course</string>
    <string name="button_text">Get Started</string>

    <!--RegisterActivity String Resources-->
    <string name="register_main_heading">Register As</string>
    <string name="buyer_btn_text">Proceed as Buyer</string>
    <string name="seller_btn_text">Proceed as Seller</string>

    <!--UserSignUpActivity/SellerSignUpActivity String Resources-->
    <string name="sign_up_main_heading">Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_btn_text">Sign Up</string>

    <!--UserLoginActivity/SellerLoginActivity String Resources-->
    <string name="login_main_heading">Login</string>
    <string name="email_hint2">Email</string>
    <string name="password_hint2">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>

    <!--UserMainActivity String Resources-->
    <string name="home_icon_text">Home</string>
    <string name="enquire_icon_text">Enquire</string>
    <string name="cart_icon_text">Cart</string>
    <string name="home_icon_imageDescription">Image of Home Icon</string>
    <string name="enquire_icon_imageDescription">Image of Enquire Icon</string>
    <string name="cart_icon_imageDescription">Image of Cart Icon</string>

    <!--UserHomeFragment/SellerHomeFragment String Resources-->
    <string name="search_hint">Search by ISBN, Title, or Code</string>
    <string name="categories_text">Categories</string>
    <string name="all_text">All</string>
    <string name="newest_text">Newest</string>
    <string name="science_text">Science</string>
    <string name="technology_text">Technology</string>

    <!--UserEnquireFragment/SellerEnquireFragment String Resources-->
    <string name="enquire_text">Enquire</string>
    <string name="enquire_text2">Have a question, need more information, or want to know more about a certain book? Click the button</string>
    <string name="enquire_btn_text">Enquire</string>
    <string name="enquire_form_text">Enquire Form</string>
    <string name="message_hint">Message</string>
    <string name="enquire_btn_text2">Send Enquire</string>

    <!--UserCartFragment/SellerCartFragment String Resources-->
    <string name="cart_text">Cart</string>
    <string name="checkout_btn_text">Checkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--SellerStorefrontFragment String Resources-->
    <string name="storefront_text">Storefront</string>
    <string name="selling_text">Books Your Selling</string>
    <string name="sold_text">Books You Have Sold</string>
</resources>
